# python-learning

./: .gitignore  main.py
Basics/: main.py
FileHandling/: Basics.py  binaryfile_operations.ipynb  jsonfile_operations.ipynb  student.json  testing.txt  textfile_operations.ipynb
Genai/mini_hive/: main.py  pyproject.toml
Genai/mini_hive/agents/: base_agent.py
Genai/mini_hive/agents/judge/: judge_agent.py
Genai/mini_hive/agents/planner/: planner_agent.py
Genai/mini_hive/agents/processor/: processor_agent.py
Genai/mini_hive/agents/researcher/: research_agent.py
Genai/mini_hive/agents/writer/: writer_agent.py
Genai/mini_hive/app/: config.py  dependencies.py
Genai/mini_hive/core/: main.py
Genai/mini_hive/graph/: edges.py  graph_builder.py  nodes.py  state.py
Genai/mini_hive/memory/: redis_store.py  short_term.py  vector_store.py
Genai/mini_hive/models/: embeddings.py  llm_provider.py
Genai/mini_hive/services/: agent_service.py  evaluation_service.py  execution_service.py
Genai/mini_hive/tools/: base_tool.py  file_reader.py  tool_registry.py  weather.py  web_search.py
Genai/mini_hive/utils/: constants.py  logger.py
Genai/notebook/: 10_Generator_Evaluator.ipynb  11_Memory.ipynb  1_basic_connection.ipynb  2_pydantic_State.ipynb  3_messages.ipynb  4_Prompts&Chains.ipynb  5_Tools&Binding.ipynb  6_ReAct.ipynb  7_Parralelization.ipynb  8_Router.ipynb  9_Orchestrator_Worker.ipynb  README.md  pyproject.toml
Numpy/: 1_basic_numpy.ipynb  2_array_slicing.ipynb  another.py
Threading Concepts/: BasicThreading.py  IntervalThreading.py  basics.ipynb  (+2 more)
(+83 files in other folders)
