[project]
name = "mini-hive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.1.1",
    "ipython>=9.10.0",
    "langchain>=1.2.12",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.2",
    "loguru>=0.7.3",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
]
